<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_main_layout_8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_all_title_8"
            android:gravity="center"
            android:text="@string/quiz_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_main_title_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz_subtitle" />

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_question" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_question_hint" />

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <EditText
            android:id="@+id/et_whale_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_2_hint" />

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_whale_pic"
                android:layout_width="@dimen/size_all_0"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="@dimen/size_all_0"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_all_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/question_3_whale"
                android:scaleType="centerCrop"
                android:src="@drawable/whales" />

            <ImageView
                android:layout_width="@dimen/size_all_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/question_3_chess"
                android:scaleType="centerCrop"
                android:src="@drawable/chess" />

        </LinearLayout>

        <TextView
            style="@style/QuestionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />

        <CheckBox
            android:id="@+id/cb_color_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4_a1" />

        <CheckBox
            android:id="@+id/cb_color_sky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4_a3" />

        <CheckBox
            android:id="@+id/cb_color_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4_a4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitQuiz"
            android:text="@string/submit_btn" />

    </LinearLayout>

</ScrollView>
